// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when auth token is stale > allows re-authentication after expired token and proceeds normally > auth-re-authenticated 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Select the features you'd like to set up                             Todo (2/6)

 Toggle Confidence features to integrate with your project.           ● Check system
                                                                      ● Log in to Confidence
 ◆ Event tracking works best with Confidence Cloud or an existing     ▶ Select features
 warehouse setup.                                                     ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Toggle features to set up:

 ❯ Flags
   Events
   Recordings (β)

 ↑↓ navigate   space toggle   enter confirm                                                  vX.Y.Z"
`;

exports[`when auth token is stale > allows signing in after failed refresh and proceeds normally > auth-refresh-failed-then-signed-in 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Select the features you'd like to set up                             Todo (2/6)

 Toggle Confidence features to integrate with your project.           ● Check system
                                                                      ● Log in to Confidence
 ◆ Event tracking works best with Confidence Cloud or an existing     ▶ Select features
 warehouse setup.                                                     ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Toggle features to set up:

 ❯ Flags
   Events
   Recordings (β)

 ↑↓ navigate   space toggle   enter confirm                                                  vX.Y.Z"
`;

exports[`when auth token is stale > falls back to sign-in when choosing existing account and refresh fails > auth-refresh-failed 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Log in to Confidence                                                 Todo (1/6)

 Log in so the wizard can create flags and set up your project.       ● Check system
                                                                      ▶ Log in to Confidence
 Your session expired. Log in again.                                  ○ Select features
                                                                      ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 We'll open your browser to log in. Continue?

 ❯ Log in to a Confidence account

 enter confirm                                                                               vX.Y.Z"
`;

exports[`when auth token is stale > prompts user to sign in again instead of using the expired token > auth-expired 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Log in to Confidence                                                 Todo (1/6)

 Log in so the wizard can create flags and set up your project.       ● Check system
                                                                      ▶ Log in to Confidence
                                                                      ○ Select features
                                                                      ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 We'll open your browser to log in. Continue?

 ❯ Log in to a Confidence account

 enter confirm                                                                               vX.Y.Z"
`;

exports[`when auth token is stale > refreshes and authenticates when choosing existing account > auth-refreshed 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Select the features you'd like to set up                             Todo (2/6)

 Toggle Confidence features to integrate with your project.           ● Check system
                                                                      ● Log in to Confidence
 ◆ Event tracking works best with Confidence Cloud or an existing     ▶ Select features
 warehouse setup.                                                     ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Toggle features to set up:

 ❯ Flags
   Events
   Recordings (β)

 ↑↓ navigate   space toggle   enter confirm                                                  vX.Y.Z"
`;

exports[`when auth token is stale > shows "Use existing account" when the token is still valid > auth-existing 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Log in to Confidence                                                 Todo (1/6)

 Log in so the wizard can create flags and set up your project.       ● Check system
                                                                      ▶ Log in to Confidence
                                                                      ○ Select features
                                                                      ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Found existing account (test@example.com). What would you like to do?

 ❯ Use existing account
   Log in to a different account

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when auth token is stale > treats a malformed token as invalid and prompts sign-in > auth-malformed 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Log in to Confidence                                                 Todo (1/6)

 Log in so the wizard can create flags and set up your project.       ● Check system
                                                                      ▶ Log in to Confidence
                                                                      ○ Select features
                                                                      ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 We'll open your browser to log in. Continue?

 ❯ Log in to a Confidence account

 enter confirm                                                                               vX.Y.Z"
`;

exports[`when auth token is stale > treats a near-expiry token as valid > auth-near-expiry 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Log in to Confidence                                                 Todo (1/6)

 Log in so the wizard can create flags and set up your project.       ● Check system
                                                                      ▶ Log in to Confidence
                                                                      ○ Select features
                                                                      ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Found existing account (test@example.com). What would you like to do?

 ❯ Use existing account
   Log in to a different account

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;
